<resources>
    <string name="app_name">Track My Task</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_maps1">Map</string>
    <string name="title_activity_maps_new_place">Map</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_location_represent">Map</string>
    <string name="TodayS_Tasks"> Today Tasks</string>
    <string name="PendingS_Tasks"> Pending Tasks</string>
    <string name="Upcoming_task">Upcoming Tasks</string>
    <string name="Start_Tracking">Start My Tracking</string>
    <string name="limit">Proximity Radius</string>
    <string name="enter_radius">Enter distance to alert(in meters)</string>
    <string name="alert">Alert Me At</string>
    <string name="meters"> Meters</string>
    <string name="settingSave">Save Changes</string>
    <string name="am"> AM </string>
    <string name="pm"> PM </string>
    <string name="place_name">Place Name : </string>
    <string name="task_name">Task Name : </string>
    <string name="due_date">Due Date : </string>
    <string name="set_date">Set Date</string>
    <string name="save">Save</string>
    <string name="saved_tasks"> Saved Tasks </string>
    <string name="add_place">Add a Place : </string>
    <string name="hint_place">Enter a place name</string>
    <string name="pick_place">Pick a Place</string>
    <string name="hint_task">Enter a Task name</string>
    <string name="locations">My Locations</string>
    <string name="home">Home</string>
    <string name="title_activity_auth">Map</string>
    <string name="restore">Restore settings</string>
    <string name="sync">Sync</string>
    <string name="about">About</string>
    <string name="location_dist">Location is at a distance</string>
    <string name="set_time">Set Time</string>
    <string name="notify_pending">Notify pending tasks: </string>
    <string name="notify_today">Notify tasks of today: </string>
    <string name="setting">Settings</string>
    <string name="skip">Skip</string>
    <string name="register_here">Register Here</string>
    <string name="sign_in">Sign In</string>
    <string name="distance_from_current">Distance From Current</string>
    <string name="distance_task_name">task name</string>
    <string name="add_location">Add New Location</string>
    <string name="log_out">Log Out</string>

</resources>
