<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.microsoft.track_my_task.Add_Task"
    android:weightSum="3"
    android:orientation="vertical">
    <LinearLayout
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2"

        >
        <Button
            android:textSize="28sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/pick_place"
            android:textAlignment="center"
            android:id="@+id/place_pick"
            android:layout_weight="1"
            android:background="@color/blue_cement"
            android:visibility="visible"

            />


    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2"
        android:background="@color/blue_cement"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/task_name"
            android:textAlignment="center"
            android:id="@+id/text"
            android:layout_weight="1"
            />
        <EditText
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/hint_task"
            android:id="@+id/task_name"
           />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2"
        android:background="@color/blue_cement"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/due_date"
            android:textAlignment="center"
            android:id="@+id/text2"
            android:layout_weight="1"
            />
        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/set_date"
            android:background="@color/button_blue"
            android:id="@+id/set_date"/>
    </LinearLayout>




    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:gravity="center"
            android:textSize="28sp"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/save"
            android:textAlignment="center"
            android:id="@+id/save_task"
            android:background="@color/blue_cement"
            />


    </LinearLayout>



</LinearLayout>