<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_cement"
        android:gravity="center"
        android:id="@+id/ll"

        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/my_locations"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="38dp"
            android:gravity="center"
            android:text="@string/locations"
            android:textSize="@dimen/dp_thirty"
            android:layout_weight="0.5" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location_list"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/ll" />

        <Button
            android:id="@+id/add_loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_list"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/add_location"
            android:backgroundTint="@color/colorAccent"
            android:background= "@null"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back_home"
            android:text="@string/home"
            android:background="@null"
            android:layout_alignParentLeft="true"

            android:layout_alignParentBottom="true"/>


</RelativeLayout>