<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.microsoft.track_my_task.HomeActivity"
    tools:showIn="@layout/app_bar_home"
    android:orientation="vertical">







        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3.5"
            android:orientation="vertical">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/PendingS_Tasks"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:id = "@+id/pending"
                    android:background="@color/blue_cement"
                    android:visibility="gone"
                    />

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/TodayS_Tasks"
                        android:gravity="center"
                        android:textSize="25sp"
                        android:id = "@+id/today"
                        android:background="@color/blue_cement"
                        android:visibility="gone"
                        />
                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:id="@+id/task_list_today"
                        />
                </LinearLayout>

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="287dp"
                    android:id="@+id/task_list_pending"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/Upcoming_task"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:id = "@+id/upcoming"
                    android:background="@color/blue_cement"

                    android:visibility="gone"
                    />
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:id="@+id/task_list_upcoming"
                    />
            </LinearLayout>



        </LinearLayout>
    </LinearLayout>



